mejoras en el scroll

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
   <!-- Contenedor principal donde aparecen las cartas -->
   <div class="piramide-container" id="piramide"></div>
 
+  <!-- Nueva sección: Escena de multitud -->
+  <section class="escena-multitud">
+    <div class="panel">
+      <div class="multitud"></div>
+      <div class="retrato-fijo"></div>
+    </div>
+    <div class="espacio-a"></div> <!-- 150vh -->
+    <div class="espacio-b"></div> <!-- 150vh -->
+  </section>
+
   <!-- Monitor de rendimiento (esquina superior derecha) -->
   <div class="monitor" id="monitor">
     🧱 Cuadros visibles: 0<br>
